k8s/shanghai/base-dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: table-search-dev
  namespace: shdev
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: table-search-dev
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: table-search-dev
        version: v1
    spec:
      imagePullSecrets:
        - name: registry-ali-hangzhou
      containers:
        - image: >-
            crpi-hytqalx0cm8oqxr4.cn-hangzhou.personal.cr.aliyuncs.com/mxrag-dev/table-search-dev:20251027184459
          imagePullPolicy: IfNotPresent
          env:
            - name: NACOS_ENABLE
              value: 'true'
            - name: APP_PROFILE
              value: dev
            - name: aliyun_logs_table-search-dev
              value: stdout
            - name: ENVIRONMENT
              value: dev
            - name: NACOS_ENDPOINT
              value: 'mse-e3004940-nacos-ans.mse.aliyuncs.com:8848'
            - name: NACOS_NAMESPACE
              value: 428d61ac-cbd2-46d9-802d-9cac49065b69
            - name: SITE
              value: cn
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 5
          name: table-search-dev
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 3
          resources:
            requests:
              cpu: "100m"
              memory: "32Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 120
