k8s/shanghai/base-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: shdev
  name: mytestapp-dev-ingress
  labels:
    ingress-controller: alb
  annotations:
    # 健康检查
    alb.ingress.kubernetes.io/healthcheck-connect-port: '0'
    alb.ingress.kubernetes.io/healthcheck-enabled: 'true'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '2'
    alb.ingress.kubernetes.io/healthcheck-protocol: TCP
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '3'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
    # 会话保持
    alb.ingress.kubernetes.io/sticky-session: "true"
    # cookie 超时
    alb.ingress.kubernetes.io/cookie-timeout: "1800"
    # 后端长连接
    alb.ingress.kubernetes.io/backend-keepalive: "true"
    # 开启“连接优雅中断”
    alb.ingress.kubernetes.io/connection-drain-enabled: "true"
    # 开启 HTTP + HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'

spec:
  ingressClassName: alb
  rules:
    # 内部域名（仅 HTTP）
    - host: mytestapp.qiewendev.inner
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: &default-backend
              service:
                name: mytestapp-dev-service
                port:
                  number: 8080

    # 公网域名（HTTPS）
    - host: mytestapp-dev.qiewenpaper.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: *default-backend

  tls:
    - hosts:
        - mytestapp-dev.qiewenpaper.com
      secretName: tls-qiewenpaper.com
